--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,5 +40,6 @@ resource.dir=setup
 run.classpath=\
     ${libs.PrimeFaces.classpath}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${libs.jsf20.classpath}
+    ${libs.jsf20.classpath}:\
+    ${libs.jpa2-persistence.classpath}
 source.root=.
